--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,4 +66,6 @@ dependencies {
 
     implementation 'org.greenrobot:eventbus:3.1.1'
     implementation 'com.android.support:cardview-v7:27.1.1'
+
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
 }
