curr/next sprint fragments added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         </activity>
 
         <activity android:name=".boards.addedit.BoardAddEditActivity" />
+
+        <activity android:name=".boards.view.BoardViewActivity" />
     </application>
 
 </manifest>
