--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,8 @@
         <activity android:name=".boards.addedit.BoardAddEditActivity" />
 
         <activity android:name=".boards.view.BoardViewActivity" />
+
+        <activity android:name=".boards.view.sprints.section.ActionItemsActivity" />
     </application>
 
 </manifest>
