action item screen with infastructure added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
         <activity android:name=".boards.view.BoardViewActivity" />
 
         <activity android:name=".boards.view.sprints.section.ActionItemsActivity" />
+
+        <activity android:name=".boards.view.sprints.section.action_item.ActionItemActivity" />
     </application>
 
 </manifest>
