--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,13 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".BottomNavigationActivity">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".BottomNavigationActivity" />
 
         <activity android:name=".boards.addedit.BoardAddEditActivity" />
 
@@ -25,6 +19,18 @@
         <activity android:name=".boards.view.sprints.section.ActionItemsListActivity" />
 
         <activity android:name=".boards.view.sprints.section.action_item.ActionItemActivity" />
+
+        <activity
+            android:name=".entry_point.SplashActivity"
+            android:theme="@style/AppTheme.Launcher">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+
+        </activity>
     </application>
 
 </manifest>
