--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,11 @@
             </intent-filter>
 
         </activity>
+
+        <activity android:name=".entry_point.LoginActivity" />
+
+        <activity android:name=".entry_point.RegistrationActivity" />
+
     </application>
 
 </manifest>
